--- a/presale/views/presale_order_views.xml
+++ b/presale/views/presale_order_views.xml
@@ -5,8 +5,8 @@
         <field name="model">presale.order</field>
         <field name="arch" type="xml">
             <tree string="Presales Orders">
-                <field name="name" />
-                <field name="customer_id" />
+                <field name="name"/>
+                <field name="customer_id"/>
             </tree>
         </field>
     </record>
@@ -17,34 +17,43 @@
         <field name="arch" type="xml">
             <form string="Offer">
                 <header>
-                    <button name="action_validate" string="Validate" type="object" icon="fa-check"
-                        attrs="{'invisible': [('state', '=', 'confirmed')]}" />
-                    <button type="action" name="%(presale.sale_order_action)d"
-                        class="oe_stat_button" icon="fa-dollar"
-                        attrs="{'invisible': [('state', '=', 'draft')]}">Sales Orders</button>
+                    <button
+                        name="action_validate"
+                        string="Validate"
+                        type="object"
+                        icon="fa-check"
+                        attrs="{'invisible': [('state', '=', 'confirmed')]}"
+                    />
+                    <button
+                        type="action"
+                        name="%(presale.sale_order_action)d"
+                        class="oe_stat_button"
+                        icon="fa-dollar"
+                        attrs="{'invisible': [('state', '=', 'draft')]}"
+                    >Sales Orders</button>
                     <field name="state" widget="statusbar" statusbar_visible="draft, confirmed">Sale
                         Order</field>
                 </header>
                 <sheet>
                     <h1>
-                        <field name="name" />
+                        <field name="name"/>
                     </h1>
                     <group>
                         <group>
-                            <field name="customer_id" />
+                            <field name="customer_id"/>
                         </group>
                         <notebook>
                             <page string="Order lines">
-                                <field name="order_line_ids" />
+                                <field name="order_line_ids"/>
                             </page>
                         </notebook>
                     </group>
                 </sheet>
 
                 <div class="oe_chatter">
-                    <field name="message_follower_ids" groups="base.group_user" />
-                    <field name="activity_ids" />
-                    <field name="message_ids" />
+                    <field name="message_follower_ids" groups="base.group_user"/>
+                    <field name="activity_ids"/>
+                    <field name="message_ids"/>
                 </div>
             </form>
         </field>
@@ -55,7 +64,7 @@
         <field name="model">presale.order</field>
         <field name="arch" type="xml">
             <search string="Presales Order">
-                <field name="name" string="Order name" />
+                <field name="name" string="Order name"/>
             </search>
         </field>
     </record>
