[FIX] [3288738] presale : fix presale module
In this commit the presale module is fixed based on the reviews received.

--- a/presale/views/presale_order_views.xml
+++ b/presale/views/presale_order_views.xml
@@ -15,7 +15,7 @@
         <field name="name">presale.order.form</field>
         <field name="model">presale.order</field>
         <field name="arch" type="xml">
-            <form string="Offer">
+            <form string="Order">
                 <header>
                     <button
                         name="action_validate"
