--- a/presale/views/sale_order_views.xml
+++ b/presale/views/sale_order_views.xml
@@ -1,30 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <data>
-
-        <record id="sale_order_view_form" model="ir.ui.view">
-            <field name="name">sale.order.view.form.inherit.presale</field>
-            <field name="model">sale.order</field>
-            <field name="inherit_id" ref="sale.view_order_form"/>
-            <field name="arch" type="xml">
-                <xpath expr="//button[@name='action_quotation_send'][4]" position="attributes">
-                    <attribute name="groups">presale.presale_group_user</attribute>
-                </xpath>
-                <xpath expr="//field[@name='validity_date']" position="after">
-                    <div class="o_td_label" attrs="{'invisible': [('state', 'in', ['draft', 'sent'])]}">
-                        <label for="presale_id" string="Presale Order"/>
-                    </div>
-                    <field name="presale_id" attrs="{'invisible': [('state', 'in', ['draft', 'sent'])]}" nolabel="1"/>
-                </xpath>
-            </field>
-        </record>
-
-        <record id="sale_order_action" model="ir.actions.act_window">
-            <field name="name">Sales Orders</field>
-            <field name="res_model">sale.order</field>
-            <field name="view_mode">tree</field>
-            <field name="domain">[('presale_id', '=', active_id)]</field>
-
-        </record>
-    </data>
+    <record id="sale_order_view_form" model="ir.ui.view">
+        <field name="name">sale.order.view.form.inherit.presale</field>
+        <field name="model">sale.order</field>
+        <field name="inherit_id" ref="sale.view_order_form"/>
+        <field name="arch" type="xml">
+            <xpath expr="//button[@name='action_quotation_send'][1]" position="attributes">
+                <attribute name="groups">presale.presale_group_user</attribute>
+            </xpath>
+            <xpath expr="//button[@name='action_quotation_send'][4]" position="attributes">
+                <attribute name="groups">presale.presale_group_user</attribute>
+            </xpath>
+            <xpath expr="//field[@name='validity_date']" position="after">
+                <div class="o_td_label">
+                    <label for="presale_id" string="Presale Order"/>
+                </div>
+                <field name="presale_id" nolabel="1"/>
+            </xpath>
+        </field>
+    </record>
 </odoo>
